src/objects/Rebate__c.object
<CustomObject>
    <fields>
        <fullName>Auditor_or_Contractor__c</fullName>
        <formula>TEXT(Install__r.Auditor_or_Contractor__c)</formula>
        <label>Auditor or Contractor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deemed_Savings__c</fullName>
        <label>Deemed Savings</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eligible_Rebate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eligible Rebate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Heat_Type__c</fullName>
        <label>Heat Type</label>
        <picklist>
            <picklistValues>
                <fullName>Space</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DHW</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Install_Cost_Currency_for_WFR__c</fullName>
        <label>Install Cost (Currency for WFR)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Install_Cost__c</fullName>
        <formula>Install__r.Install_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Install Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Install_Record_Type__c</fullName>
        <formula>Install__r.RecordType.Name</formula>
        <label>Install Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Type__c</fullName>
        <formula>TEXT(Install__r.Install_Type__c)</formula>
        <label>Install Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install__c</fullName>
        <label>Install</label>
        <referenceTo>Install__c</referenceTo>
        <relationshipLabel>Rebates</relationshipLabel>
        <relationshipName>Rebates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Post_Condition_R_Value__c</fullName>
        <label>Post-Condition R Value</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_Condition_R_Value__c</fullName>
        <label>Pre-Condition R Value</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <formula>Install__r.Priority__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Install__r.Project__r.Name</formula>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_of_Rebates_Earned__c</fullName>
        <formula>Install__r.Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity of Rebates Earned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_of_Rebates_WFR__c</fullName>
        <label>Quantity of Rebates (WFR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rebate_Amount__c</fullName>
        <label>Rebate Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rebate_Amount_per_Square_Foot__c</fullName>
        <label>Rebate Amount per Square Foot</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rebate_as_a_Percent__c</fullName>
        <label>Rebate as a Percent</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required_heat_Source__c</fullName>
        <label>Required Heat Source</label>
        <picklist>
            <picklistValues>
                <fullName>Electric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Either</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Value_Rebates_Earned__c</fullName>
        <formula>Quantity_of_Rebates_Earned__c *  Rebate_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Value Rebates Earned</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Value_Rebates_Earned_for_Rollup__c</fullName>
        <label>Total Value Rebates Earned (for Rollup)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Up_to_Amount__c</fullName>
        <label>Up to Amount</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Utility_Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Utility Provider</label>
        <referenceTo>Utility_Provider__c</referenceTo>
        <relationshipLabel>Rebates</relationshipLabel>
        <relationshipName>Rebates</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Rebate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project_Name__c</columns>
        <columns>Priority__c</columns>
        <columns>Install_Type__c</columns>
        <columns>Auditor_or_Contractor__c</columns>
        <columns>Install_Record_Type__c</columns>
        <columns>Heat_Type__c</columns>
        <columns>Required_heat_Source__c</columns>
        <columns>Utility_Provider__c</columns>
        <columns>Rebate_Amount__c</columns>
        <columns>Quantity_of_Rebates_Earned__c</columns>
        <columns>Eligible_Rebate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PROJECT_000001</fullName>
        <columns>NAME</columns>
        <columns>Project_Name__c</columns>
        <columns>Priority__c</columns>
        <columns>Install_Type__c</columns>
        <columns>Auditor_or_Contractor__c</columns>
        <columns>Install_Record_Type__c</columns>
        <columns>Heat_Type__c</columns>
        <columns>Required_heat_Source__c</columns>
        <columns>Utility_Provider__c</columns>
        <columns>Rebate_Amount__c</columns>
        <columns>Quantity_of_Rebates_Earned__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Name__c</field>
            <operation>equals</operation>
            <value>PROJECT-000001</value>
        </filters>
        <label>PROJECT-000001</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PROJECT_000007</fullName>
        <columns>NAME</columns>
        <columns>Project_Name__c</columns>
        <columns>Priority__c</columns>
        <columns>Install_Type__c</columns>
        <columns>Auditor_or_Contractor__c</columns>
        <columns>Install_Record_Type__c</columns>
        <columns>Heat_Type__c</columns>
        <columns>Required_heat_Source__c</columns>
        <columns>Utility_Provider__c</columns>
        <columns>Rebate_Amount__c</columns>
        <columns>Quantity_of_Rebates_Earned__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Name__c</field>
            <operation>equals</operation>
            <value>PROJECT-000007</value>
        </filters>
        <label>PROJECT-000007</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>REBATE-{0000000}</displayFormat>
        <label>Rebate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rebates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>